--- a/KLS_WEB/KLS_WEB/Views/Travels/Details.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Travels/Details.cshtml
@@ -49,6 +49,10 @@
     .wrapper > .data-content {
         text-align: unset;
     }
+    .btn-secondary {
+        text-decoration: unset !important;
+        box-shadow: 0px 0px 10px 0px rgb(0 0 0 / 20%) !important;
+    }
 </style>
 
 <div class="pl-5 pr-5">
@@ -163,6 +167,12 @@
                         </div>
                     </div>
                     <div class="form-group row">
+                        <label class="col-5 col-form-label col-form-label-sm">OPERADOR</label>
+                        <div class="col-7">
+                            <input asp-for="CreatedBy" type="text" class="form-control form-control-sm" disabled="disabled" required>
+                        </div>
+                    </div>
+                    <div class="form-group row">
                         <label class="col-5 col-form-label col-form-label-sm">CHOFER</label>
                         <div class="col-7">
                             <input asp-for="ChoferNombre" type="text" class="form-control form-control-sm" disabled="disabled" required>
@@ -233,14 +243,14 @@
                         <div class="name font-barlow">Historial</div>
                     </div>
                 </a>
-                @*<a href="#" class="catalog">
+                <a href="javasript:void(0)" class="catalog" id="monitoreo" onclick="showPanel(this.id)">
                     <div class="content">
-                    <span class="material-icons">
-                    pin_drop
-                    </span>
-                    <div class="name font-barlow">Monitoreo</div>
+                        <span class="material-icons">
+                            pin_drop
+                        </span>
+                        <div class="name font-barlow">Monitoreo</div>
                     </div>
-                    </a>*@
+                </a>
             </div>
         </div>
 
@@ -687,6 +697,42 @@
                 </thead>
                 <tbody id="historialInfo"></tbody>
             </table>
+        </div>
+
+        @*MONITOREO*@
+        <div class="col-12 monitoreo">
+            <div class="text-left d-flex justify-content-between mb-3 mt-3">
+                <div>
+                    <h4>MONITOREO</h4>
+                </div>
+                <div>
+                    <button class="btn btn-sm btn-secondary"><span class="material-icons" style="margin-top: .5rem;">add</span></button>
+                    <button class="btn btn-sm btn-secondary"><span class="material-icons text-danger" style="margin-top: .5rem;">flag</span></button>
+                </div>
+            </div>
+            <div class="d-flex justify-content-around">
+                <div class="d-flex flex-column">
+                    <label for="monitorselect" class="form-label">MONITOR</label>
+                    <select id="monitorselect" class="form-select" aria-label="Default select example" name="monitor">
+                        <option selected>Open this select menu</option>
+                        <option value="1">One</option>
+                        <option value="2">Two</option>
+                        <option value="3">Three</option>
+                    </select>
+                </div>
+                <div class="d-flex flex-column">
+                    <label for="cuentaespejo" class="form-label">CUENTA ESPEJO</label>
+                    <input id="cuentaespejo" class="form-select" aria-label="Default select example" name="cuentaespejo" />
+                </div>
+                <div class="d-flex flex-column">
+                    <label for="usuario" class="form-label">USUARIO</label>
+                    <input id="usuario" class="form-select" aria-label="Default select example" name="usuario" />
+                </div>
+                <div class="d-flex flex-column">
+                    <label for="contraseña" class="form-label">CONTRASEÑA</label>
+                    <input id="contraseña" class="form-select" aria-label="Default select example" name="contraseña" />
+                </div>
+            </div>
         </div>
 
 
