--- a/KLS_WEB/KLS_WEB/Views/Travels/Index.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Travels/Index.cshtml
@@ -84,7 +84,7 @@
                     }
                 },
                 initComplete: () => {
-                    $('#table_length').html(`<a href="/Travels/0" class="btn btn-sm btn-outline-secondary float-right"><span class="material-icons">add</span></a>`).show();
+                    $('#table_length').html(`<a href="/Travels/AddMainTravel" class="btn btn-sm btn-outline-secondary float-right"><span class="material-icons">add</span></a>`).show();
                 }
             });
         }
