--- a/KLS_WEB/KLS_WEB/Views/Travels/Index.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Travels/Index.cshtml
@@ -5,6 +5,7 @@
     <div class="p-4">
         <div class="text-left mb-3">
             <div class="text-uppercase poppins medium size-24 pl-2">Viajes</div>
+            <a asp-action="AddEdit" asp-route-id="1" class="btn btn-sm btn-outline-secondary float-right"><span class="material-icons">add</span></a>
         </div>
 
         <div class="p-4 shadow bg-white">
@@ -31,7 +32,7 @@
 @section Scripts{
     <script>
         $(document).ready(function (event) {
-            DT();
+            //DT();
         });
 
         DT = () => {
